# mate-globalmenu

./: AUTHORS  Makefile.am  Makefile.configmake  Makefile.in  Makefile.sanity  README.MATE  README.md  aclocal.m4  config.h.in  configure  configure.ac  mate-globalmenu.1
applet/: GlobalMenu_MatePanelApplet.server.in.in  Makefile.am  Makefile.in  applet.c  application.c  gtkextra-mateconfdialog.c  main.c  switcher.c  template.c  workspaceselector.c
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
globalmenu-mate-panel/: Makefile.am  Makefile.in  module-main.c
globalmenu-plugin/: Makefile.am  Makefile.in  agent-factory.c  agent.c  globalmenu-plugin.h  gtk-menubar.c  gtk-widget.c  locator.c  module-main.c  patcher.c  serializer.c  superrider.c
legacy-support/: Makefile.in
libserver/: Makefile.am  Makefile.in  adapter.c  enums.c  globalmenu-server.h  globalmenuadapter.c  globalmenubar.c  globalmenuitem.c  monitor.c  parser.c  serializer.c  window.c
libserver/ccode/: keygrab-ccode.c  menushellutils-ccode.c
libserver/interfaces/: item.c  shell.c
libserver/utils/: keygrab.c  menushellutils.c  mnemonickeys.c
libserver/widgets/: menu.c  menubar.c  menubarbox.c  menuitem.c  menulabel.c
libsettings/: Makefile.am  Makefile.in  global-settings.c  globalmenu-settings.h  local-settings.c  settings.c
po/: POTFILES.in  POTFILES.skip  ca.po  da.po  de.po  en_GB.po  eo.po  es.po  fi.po  fr.po  gl.po  he.po  hu.po  id.po  it.po  ko.po  lt.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sv.po  te.po  tr.po  uk.po  zh_CN.po
schemas/: Makefile.am  Makefile.in  mate-globalmenu.schemas.in
tools/: Makefile.am  Makefile.in  globalmenu-settings.c  standalone.c
